--- a/portfolio.html
+++ b/portfolio.html
@@ -77,112 +77,130 @@
           </ul>
           <ul class="line-1">
             <li class="line-1-item">
-              <img
-                src=".//images/img.1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Banking App Interface Concept</h3>
-                <p class="apps-p">App</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Banking App Interface Concept</h3>
+                  <p class="apps-p">App</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Cashless Payment</h3>
-                <p class="apps-p">Marketing</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Cashless Payment</h3>
+                  <p class="apps-p">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src="./images/img.3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Meditation App</h3>
-                <p class="apps-p">App</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src="./images/img.3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Meditation App</h3>
+                  <p class="apps-p">App</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Taxi Service</h3>
-                <p class="apps-p">Marketing</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Taxi Service</h3>
+                  <p class="apps-p">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Screen Illustrations</h3>
-                <p class="apps-p">Design</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Screen Illustrations</h3>
+                  <p class="apps-p">Design</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Online Courses</h3>
-                <p class="apps-p">Marketing</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Online Courses</h3>
+                  <p class="apps-p">Marketing</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Instagram Stories Concept</h3>
-                <p class="apps-p">Design</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Instagram Stories Concept</h3>
+                  <p class="apps-p">Design</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Organic Food</h3>
-                <p class="apps-p">WebSite</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Organic Food</h3>
+                  <p class="apps-p">WebSite</p>
+                </div>
+              </a>
             </li>
             <li class="line-1-item">
-              <img
-                src=".//images/img.9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <div class="apps-container">
-                <h3 class="apps">Fresh Coffee</h3>
-                <p class="apps-p">WebSite</p>
-              </div>
+              <a href="#" class="portfolio-link">
+                <img
+                  src=".//images/img.9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="apps-container">
+                  <h3 class="apps">Fresh Coffee</h3>
+                  <p class="apps-p">WebSite</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
